--- a/logun.html
+++ b/logun.html
@@ -14,7 +14,11 @@
             animation-fill-mode: forwards;
             font-family: Arial, sans-serif;
             color: #fff;
-}
+            margin: 0;
+            min-height: 100vh; /* Ensure full height for body */
+            display: flex;
+            flex-direction: column;
+        }
 
         @keyframes move {
             100% {
@@ -22,11 +26,31 @@
             }
         }
 
-        .login-container {
+        /* Navbar styles */
+        .navbar {
+            background-color: #222;
+            padding: 10px;
+            text-align: center;
+            width: 100%; /* Full width */
+            position: fixed; /* Fixed position */
+            top: 0; /* Stick to the top */
+            left: 0; /* Align to the left */
+            z-index: 1000; /* Ensure it is above other content */
+        }
+
+        .navbar h1 {
+            color: #66d9ef;
+            margin: 0;
+            font-size: 24px;
+        }
+
+        /* Main content area */
+        .content {
+            flex: 1;
+            padding-top: 80px; /* Add space for navbar */
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
         }
 
         .login-box {
@@ -34,11 +58,12 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            padding-right:40px;
+            padding-right: 40px;
+            margin-bottom: 40px; /* Add space between login box and footer */
         }
 
         .login-box h2 {
-            font-family: 'Pacifico', cursive;
+            font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             font-size: 36px;
             text-align: center;
             margin-bottom: 20px;
@@ -85,10 +110,39 @@
         button[type="submit"]:hover {
             background-color: #777;
         }
+
+        /* Footer styles */
+        footer {
+            text-align: center;
+            padding: 10px 20px;
+            color: #40e0d0;
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #222;
+            font-size: 14px;
+            flex-shrink: 0;
+        }
+
+        footer .development-text {
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        footer .developer a {
+            color: #40e0d0;
+            text-decoration: none;
+        }
+
+        footer .developer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <div class="login-container">
+    <div class="navbar">
+        <h1>TITLE</h1>
+    </div>
+
+    <div class="content">
         <div class="login-box">
             <h2>CGPA CALCULATOR</h2>
             <form id="login-form">
@@ -105,6 +159,15 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer>
+        <p class="development-text">App in development!!</p>
+        <p>© 2024 Copyright: CGPA CALC</p>
+        <p class="developer">
+            <a href="https://github.com/SShashwath/cgpa-calc" target="_blank">Developed by S-ashwath</a>
+        </p>
+    </footer>
+
     <script>
         // Simple form validation
         const form = document.getElementById('login-form');
@@ -119,7 +182,7 @@
             const password = passwordInput.value;
     
             if (username === '' || password === '') {
-                alert('Please fill in all fieldds');
+                alert('Please fill in all fields');
             } else {
                 // Store the username and password in variables
                 let userInput = username;
