--- a/logun.html
+++ b/logun.html
@@ -164,7 +164,7 @@
         <p class="development-text">App in development!!</p>
         <p>© 2024 Copyright: CGPA CALC</p>
         <p class="developer">
-            <a href="https://github.com/SShashwath/cgpa-calc" target="_blank">Developed by S-ashwath</a>
+            <a href="https://github.com/SShashwath/cgpa-calc" target="_blank">Developed by Sh-ashwath</a>
         </p>
     </footer>
 
