Created page 2 HTML

--- a/logun.html
+++ b/logun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CGPA CALCULATOR</title>
+    <title>Easy College</title>
     <style>
         /* Dark theme */
         body {
@@ -13,6 +13,7 @@
             animation: move 3s ease-out;
             animation-fill-mode: forwards;
             font-family: Arial, sans-serif;
+            background-color: #222;
             color: #fff;
             margin: 0;
             min-height: 100vh; /* Ensure full height for body */
@@ -28,7 +29,7 @@
 
         /* Navbar styles */
         .navbar {
-            background-color: #222;
+            background-color: #333; 
             padding: 10px;
             text-align: center;
             width: 100%; /* Full width */
@@ -117,7 +118,7 @@
             padding: 10px 20px;
             color: #40e0d0;
             font-family: 'Courier New', Courier, monospace;
-            background-color: #222;
+            background-color: #333;
             font-size: 14px;
             flex-shrink: 0;
         }
