--- a/pages.html
+++ b/pages.html
@@ -29,7 +29,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: url('background.jpeg') no-repeat center center fixed;
+        background: url('images/background.jpeg') no-repeat center center fixed;
         background-size: cover;
         font-family: Arial, sans-serif;
         color: white;
@@ -117,11 +117,11 @@
         </div>
         <div class="options">
             <button class="button" onclick="alert('Bunkr Selected')">
-                <img src="attendance.jpeg" alt="Bunkr Icon">
+                <img src="images/attendance.jpeg" alt="Bunkr Icon">
                 <p>Attendance</p>
             </button>
             <button class="button" onclick="alert('CGPA CALC Selected')">
-                <img src="cgpa-icon.png" alt="CGPA Icon">
+                <img src="images/cgpa-icon.png" alt="CGPA Icon">
                 <p>CGPA</p>
             </button>
         </div>
