--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: url('background.jpeg') no-repeat center center/cover;
+        background: url('images/background.jpeg') no-repeat center center/cover;
         background-size: cover;
     }
     .login-container {
