--- a/login.html
+++ b/login.html
@@ -70,19 +70,45 @@
         width: 100%;
     }
     .login-btn {
-        width: 100%;
-        padding: 10px;
-        margin-top: 1rem;
-        border: none;
-        border-radius: 5px;
-        background: linear-gradient(45deg, #ff6b6b, #f06595);
-        color: #fff;
-        font-weight: bold;
-        cursor: pointer;
-    }
-    .login-btn:hover {
-        opacity: 0.9;
-    }
+        padding-top: 35px;
+    font-size: 18px;
+    color: #e1e1e1;
+    font-family: inherit;
+    font-weight: 800;
+    cursor: pointer;
+    position: relative;
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: color;
+}
+
+.login-btn:focus,
+.login-btn:hover {
+    color: #fff;
+}
+
+.login-btn:focus:after,
+.login-btn:hover:after {
+    width: 100%;
+    left: 0%;
+}
+
+.login-btn:after {
+    content: "";
+    pointer-events: none;
+    bottom: -2px;
+    left: 50%;
+    position: absolute;
+    width: 0%;
+    height: 2px;
+    background-color: #fff;
+    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition-duration: 400ms;
+    transition-property: width, left;
+}
      /* Footer styles */
      footer { 
             text-align: center;
@@ -125,7 +151,7 @@
         <h1>Easy College</h1>
     </div>
 <div class="login-container">
-    <h2>ACCOUNT LOGIN</h2>
+    <h2>Welcome</h2>
     <div class="input-field">
         <i>&#128100;</i>
         <input type="text" placeholder="User name" required>
